2011-01-04  NIIBE Yutaka  <gniibe@fsij.org>

	* src/chconf.h (CH_USE_DYNAMIC): It's TRUE now.

	* src/usb_desc.c (gnukConfigDescriptor): Added PINPAD_SUPPORT.

	* src/pin-cir.c (cir_timer_interrupt): Added CIR_PERIOD_INHIBIT_CHATTER.

2010-12-29  NIIBE Yutaka  <gniibe@fsij.org>

	* src/pin-cir.c (cir_timer_interrupt): Support Philips RC-5 protocol.

2010-12-28  NIIBE Yutaka  <gniibe@fsij.org>

	* src/pin-cir.c (cir_timer_interrupt): Support Philips RC-6 protocol.

2010-12-27  NIIBE Yutaka  <gniibe@fsij.org>

	* src/pin-cir.c (cir_timer_interrupt): Support Sony protocol.

2010-12-24  NIIBE Yutaka  <gniibe@fsij.org>

	* src/pin-cir.c: New file.

2010-12-20  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (GPGthread): Added PINPAD_SUPPORT.
	* boards/STBEE_MINI/mcuconf.h: Simplified.
	* boards/STBEE_MINI/board.h: Include config.h.
	(PINPAD_SUPPORT): Added.
	* boards/STBEE_MINI/board.c (hwinit1): Added PINPAD_SUPPORT.

2010-12-15  NIIBE Yutaka  <gniibe@fsij.org>

	* src/configure (FLASH_SIZE): Without 'k'.
	* src/gnuk.ld.in (MEMORY): Append "k" here.
	(.gnuk_flash): End point should be aligned too.

	* src/config.h.in (@PINPAD_DEFINE@): New.
	* src/Makefile.in (@PINPAD_MAKE_OPTION@): New.
	* src/configure (PINPAD_MAKE_OPTION, PINPAD_DEFINE): New.

2010-12-14  NIIBE Yutaka  <gniibe@fsij.org>

	* src/configure (FLASH_PAGE_SIZE): Always set.

2010-12-13  NIIBE Yutaka  <gniibe@fsij.org>

	* Version 0.5.

	* src/usb_desc.c (gnukStringSerial): Updated.

2010-12-10  NIIBE Yutaka  <gniibe@fsij.org>

	* src/usb-cdc-vport.c (Virtual_Com_Port_Data_Setup)
	(Virtual_Com_Port_NoData_Setup): No check for class&interface
	request.

	* src/usb-icc.c (ATR): Fixed.

	* src/usb_desc.c (/* ICC Descriptor*/): bcdCCID = 1.1.
	dwDefaultClock = dwMaximumClock = 3571.
	dwFeatures 0x00040842.

	* src/usb_prop.c (gnuk_clock_frequencies, gnuk_data_rates): New.
	(gnuk_nothing_todo): Removed.
	(gnuk_setup_with_data, gnuk_setup_with_nodata): New.